<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/front_page_tilebar_lay"
    tools:context="ie.gmit.computing.MainActivity" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

   <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="60dp"
    	android:background="@drawable/n"
   		android:gravity="center">

        <TextView
            android:id="@+id/treepage_tilebar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainmenu"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="65dp"
            android:minWidth="150dp"
            android:onClick="gotoActivity"
            android:screenOrientation="sensor"
            android:text="@string/Camera"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="65dp"
            android:minWidth="150dp"
            android:onClick="gotoActivity"
            android:text="@string/Tree"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnUserTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="65dp"
            android:minWidth="150dp"
            android:onClick="gotoActivity"
            android:shadowDx="12"
            android:shadowDy="12"
            android:text="@string/usertree"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="65dp"
            android:minWidth="150dp"
            android:onClick="gotoActivity"
            android:text="@string/Settings"
            android:textSize="24sp"  />
        
        <Button
            android:id="@+id/btnUsersGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="65dp"
            android:minWidth="150dp"
            android:onClick="gotoActivity"
            android:shadowDx="12"
            android:shadowDy="12"
            android:text="@string/Groups"
            android:textSize="24sp" />

    </LinearLayout>
    
</LinearLayout>
