<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/x"
        android:gravity="center"
    	android:orientation="horizontal">
	    
	    	<TextView
	    	    android:id="@+id/camerapage_tilebar_textview"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/userprefs"
	    	    android:textColor="#ffffff"
	    	    android:textSize="30sp" />
        
    </LinearLayout>
    
	    <Button
	        android:id="@+id/btnPrefs"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/userssettings" />
		 
		<Button
		    android:id="@+id/btnGetPreferences"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/showinfo" />
		 
		<TextView
		  android:id="@+id/txtPrefs"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content" />
		    

</LinearLayout>
