<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_page_tilebar_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/x"
        android:gravity="center"
    	android:orientation="horizontal">
	    
	    	<TextView
	        android:id="@+id/camerapage_tilebar_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/camerapage"
	        android:textColor="#ffffff"
	        android:textSize="30sp" />

        
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ivReturnPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/x"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ibTakePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Picture" />

            <Button
                android:id="@+id/btnCoordinate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location" />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email" />

        </LinearLayout>

    </RelativeLayout>
    
     </LinearLayout>