<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tree_page_tilebar_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="60dp"
    	android:background="@drawable/d"
   		android:gravity="center"
    	android:orientation="horizontal">

        <TextView
            android:id="@+id/treepage_tilebar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Tree"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/x"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAddBtn"
                style="@style/AppBaseTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Add" />

            <Button
                android:id="@+id/btnDeleteBtn"
                style="@style/AppBaseTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delete" />

            <Button
                android:id="@+id/btnModifyBtn"
                style="@style/AppBaseTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Modify" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/layoutAddederBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <LinearLayout
                android:id="@+id/ButtonsAdded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_vertical"
                android:orientation="vertical" >

                <!--  <Button
                    android:id="@+id/btnStartTree"
                    android:layout_width="154dp"
                    android:layout_height="116dp"
                    android:text="@string/StartTree" />-->

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btnBack" />

    </RelativeLayout>

   <!--   <RelativeLayout
        android:id="@+id/ButtonsAdded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Addme" /> 

    </LinearLayout>-->

</LinearLayout>
